# GPXSee_Cmake

./: .gitignore  CMakeLists.txt
data/maps/: GoogleEarth.xml  OpenStreetMap.xml  OpenTopoMap.xml
src/GUI/: areaitem.h
src/common/: polygon.h
src/data/: area.h
